--- a/Css/head-content.css
+++ b/Css/head-content.css
@@ -18,6 +18,11 @@
   transform: matrix(1, -0.05, 0.1, 1, 0, 0);
 }
 
+.right-img:hover {
+  /* !HITTA GIF */
+  transition: 0.4s;
+}
+
 /* !Left */
 
 :is(.left p, .left h1, .left button) {
