--- a/Css/head-content.css
+++ b/Css/head-content.css
@@ -7,8 +7,9 @@
 
 .btn-menu {
   position: absolute;
-  right: 8%;
-  top: 11%;
+  margin: 5%;
+  right: 2%;
+  top: 2%;
   background: #51b7e4;
 }
 
