--- a/Css/head-content.css
+++ b/Css/head-content.css
@@ -14,6 +14,7 @@
 }
 
 .right-img {
+  z-index: 1;
   margin: 1%;
   width: 95%;
   transform: matrix(1, -0.05, 0.1, 1, 0, 0);
@@ -36,7 +37,6 @@
 }
 
 .left .logo {
-  background: url(image.png);
   width: 45%;
   border-radius: 10px;
 }
