--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ button:focus {
   width: 95%;
   background: url("Images/background.jpg") no-repeat center center;
   background-size: cover;
-  z-index: 1;
   border-radius: 50px;
 
   /* !shadow */
@@ -63,4 +62,35 @@ button:focus {
 
 .gif:hover {
   content: url("Images/idle.gif");
+}
+
+/* !Loading */
+.loader-img,
+.loader h1 {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.loader h1 {
+  position: fixed;
+  z-index: 99999;
+  top: 20%;
+  left: 42%;
+  font-size: 72px;
+}
+
+.loader.hidden {
+  animation: fadeOut 3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
