--- a/Css/footer.css
+++ b/Css/footer.css
@@ -1,3 +1,7 @@
+footer {
+  display: none;
+}
+
 .footer-content {
   margin: 2.5%;
   background: url("/Images/background.jpg") no-repeat right;
@@ -12,7 +16,7 @@
   margin-left: 150px;
   height: 100%;
   transform: rotate(-180deg);
-  border-radius: 120000px;
+  border-radius: 1000px;
 }
 
 .footer-mid {
@@ -27,8 +31,8 @@
 .footer-mid:hover {
   cursor: pointer;
   transition: 0.4s;
-  box-shadow: 2px 2px 5px black;
-  -webkit-box-shadow: 0px 10px 50px black;
+  box-shadow: 5px 10px 5px #0d6cc8;
+  -webkit-box-shadow: 5px 10px 50px #0d6cc8;
 }
 
 .footer-left {
