--- a/Css/head-content.css
+++ b/Css/head-content.css
@@ -1,3 +1,29 @@
+.head-content {
+  margin: 2.5%;
+  height: 90%;
+  width: 95%;
+  background: url("/Images/background.jpg") no-repeat center center;
+  background-size: cover;
+  border-radius: 50px;
+  margin-bottom: 5rem;
+
+  /* !shadow */
+  box-shadow: 20px 30px 10px rgb(103, 103, 103);
+  -webkit-box-shadow: 20px 30px 10px rgb(103, 103, 103);
+}
+
+/* !Gif animation */
+
+.gif {
+  content: url("/Images/stand.gif");
+  border-radius: 100px;
+}
+
+.gif:hover {
+  content: url("/Images/idle.gif");
+  border-radius: 100px;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -32,8 +58,8 @@
 .left .logo:hover {
   cursor: pointer;
   transition: 0.4s;
-  box-shadow: 2px 2px 5px #0d6cc8;
-  -webkit-box-shadow: 2px 2px 5px #0d6cc8;
+  box-shadow: 5px 5px 10px #0d6cc8;
+  -webkit-box-shadow: 5px 5px 10px #0d6cc8;
 }
 
 .left h1 {
