--- a/Css/style.css
+++ b/Css/style.css
@@ -5,6 +5,8 @@
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 
 body {
