--- a/Css/head-content.css
+++ b/Css/head-content.css
@@ -4,7 +4,16 @@
 }
 
 /* !Right */
+.btn-menu {
+  position: absolute;
+  top: 2%;
+  right: 7%;
+  margin: 1%;
+  background: #7fcbeb;
+}
+
 .right-img {
+  position: relative;
   width: 90%;
   transform: matrix(1, -0.05, 0.1, 1, 0, 0);
 }
@@ -56,6 +65,6 @@
   background: #7fcbeb;
 }
 
-.btn-menu {
+.left .btn2 {
   background: #0d6dc8;
 }
