--- a/Css/loading.css
+++ b/Css/loading.css
@@ -1,19 +1,11 @@
 /* !Loading */
-.loader-img {
-  position: fixed;
-  z-index: 9;
-  top: 0;
-  left: 0;
+.loader-gif {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
-  height: 100%;
-}
-
-.loader h1 {
-  position: fixed;
-  z-index: 9999;
-  top: 20%;
-  left: 42%;
-  font-size: 68px;
+  max-height: 100%;
 }
 
 .animate-bottom {
