--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,6 @@
 * {
   /* !Undraggable */
+  box-sizing: border-box;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-drag: none;
@@ -16,10 +17,15 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: repeat;
+  overflow-y: scroll;
 }
 
 main {
   display: none;
+}
+
+ul {
+  list-style: none;
 }
 
 button {
