--- a/Css/pokedex.css
+++ b/Css/pokedex.css
@@ -5,46 +5,48 @@
   padding-top: 3rem;
 }
 
-.bread-text {
-  color: rgb(255, 238, 0);
-  text-align: center;
-  font-size: 24px;
-  padding-bottom: 3rem;
-}
-
-.poke-container {
+.pokemon-container {
   display: flex;
   flex-wrap: wrap;
   align-items: space-between;
   justify-content: center;
   margin: 0 auto;
-  max-width: 1200px;
 }
 
 .pokemon {
-  background-color: #eee;
-  border-radius: 20px;
-  box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
   margin: 3rem;
   padding: 2rem;
   text-align: center;
 }
 
 .pokemon .img-container {
-  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
   text-align: center;
+  animation: pokeconsmall 0.9s forwards ease;
+}
+.pokemon:hover .img-container {
+  background-color: white;
+  animation: pokeconbig 0.9s forwards ease;
 }
 
 .pokemon .img-container img {
-  margin-top: 20px;
-  max-width: 90%;
+  animation: bigger 1s forwards ease;
+}
+
+.pokemon:hover .img-container img {
+  animation: smaller 1s forwards ease;
 }
 
 .pokemon .info {
   margin-top: 20px;
+  animation: hide 2s forwards ease;
+}
+
+.pokemon:hover .info {
+  animation: appear 2s forwards ease;
 }
 
 .pokemon .number {
@@ -52,9 +54,19 @@
   border-radius: 10px;
   font-size: 0.8em;
   padding: 5px 10px;
+  animation: hide 1s forwards ease;
+}
+
+.pokemon:hover .number {
+  animation: appear 1s forwards ease;
 }
 
 .pokemon .name {
   margin: 15px 0 7px;
   letter-spacing: 1px;
+  animation: hide 1s forwards ease;
+}
+
+.pokemon:hover .name {
+  animation: appear 1s forwards ease;
 }
