--- a/Css/box.css
+++ b/Css/box.css
@@ -69,3 +69,29 @@
 .movie-img2 {
   width: 48%;
 }
+
+.box-content {
+  margin: 2.5%;
+  height: 90%;
+  width: 95%;
+  background-size: cover;
+  border-radius: 50px;
+  margin-bottom: 5rem;
+
+  /* !shadow */
+  box-shadow: 10px 15px 10px rgb(103, 103, 103);
+  -webkit-box-shadow: 10px 15px 10px rgb(103, 103, 103);
+}
+.box-content2 {
+  transform: rotate(-180deg);
+  margin: 2.5%;
+  height: 90%;
+  width: 95%;
+  background-size: cover;
+  border-radius: 50px;
+  margin-bottom: 5rem;
+
+  /* !shadow */
+  box-shadow: -10px -15px 10px rgb(103, 103, 103);
+  -webkit-box-shadow: -10px -15px 10px rgb(103, 103, 103);
+}
