--- a/Css/footer.css
+++ b/Css/footer.css
@@ -2,6 +2,19 @@ footer {
   display: none;
 }
 
+.footer-content {
+  margin: 2.5%;
+  background-size: cover;
+  border-radius: 50px;
+  transform: rotate(-180deg);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  /* !shadow */
+  box-shadow: 10px 15px 10px rgb(103, 103, 103);
+  -webkit-box-shadow: 10px 15px 10px rgb(103, 103, 103);
+}
+
 .footer-right {
   margin-left: 5%;
   height: 100%;
