--- a/Css/pokedex.css
+++ b/Css/pokedex.css
@@ -4,15 +4,21 @@
   font-size: 72px;
   padding-top: 3rem;
 }
-
+.pokedex-text {
+  text-align: center;
+  font-size: 28px;
+}
+/* !Utanför */
 .pokemon-container {
   display: flex;
   flex-wrap: wrap;
   align-items: space-between;
   justify-content: center;
   margin: 0 auto;
+  transition: 0.4s;
 }
 
+/* !Korten */
 .pokemon {
   background-color: white;
   border-radius: 30px;
@@ -20,33 +26,39 @@
   margin: 3rem;
   padding: 2rem;
   text-align: center;
+  box-shadow: 1px 1.5px 10px;
+  -webkit-box-shadow: 1px 1.5px 10px;
 }
 
+/* !bilden */
 .pokemon .img-container {
   border-radius: 50%;
   text-align: center;
   animation: pokeconsmall 0.9s forwards ease;
 }
-.pokemon:hover .img-container {
+.pokemon:hover .img-container,
+.pokemon:active .img-container {
   background-color: white;
   animation: pokeconbig 0.9s forwards ease;
 }
 
 .pokemon .img-container img {
-  animation: bigger 1s forwards ease;
+  animation: bigger 2s forwards ease;
 }
 
-.pokemon:hover .img-container img {
+.pokemon:hover .img-container img,
+.pokemon:active .img-container img {
   animation: smaller 1s forwards ease;
 }
 
+/* !Texten */
 .pokemon .info {
-  margin-top: 20px;
-  animation: hide 2s forwards ease;
+  animation: hide-pokemon 2s forwards ease;
 }
 
-.pokemon:hover .info {
-  animation: appear 2s forwards ease;
+.pokemon:hover .info,
+.pokemon:active .info {
+  animation: appear-pokemon 2s forwards ease;
 }
 
 .pokemon .number {
@@ -57,7 +69,8 @@
   animation: hide 1s forwards ease;
 }
 
-.pokemon:hover .number {
+.pokemon:hover .number,
+.pokemon:active .number {
   animation: appear 1s forwards ease;
 }
 
@@ -67,6 +80,7 @@
   animation: hide 1s forwards ease;
 }
 
-.pokemon:hover .name {
+.pokemon:hover .name,
+.pokemon:active .name {
   animation: appear 1s forwards ease;
 }
