--- a/Css/style.css
+++ b/Css/style.css
@@ -49,3 +49,16 @@ button:hover {
 button:focus {
   outline: none;
 }
+
+:is(.index-content, .reverse-index-content) {
+  margin: 2.5%;
+  height: 90%;
+  width: 95%;
+  background-size: cover;
+  border-radius: 50px;
+  margin-bottom: 5rem;
+
+  /* !shadow */
+  box-shadow: 10px 15px 5px rgb(103, 103, 103);
+  -webkit-box-shadow: 10px 15px 5px rgb(103, 103, 103);
+}
