--- a/Css/footer.css
+++ b/Css/footer.css
@@ -3,7 +3,8 @@ footer {
 }
 
 .footer-content {
-  margin: 2.5%;
+  margin: 2.5rem;
+  margin-bottom: 5rem;
   background-size: cover;
   border-radius: 50px;
   transform: rotate(-180deg);
@@ -11,8 +12,8 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
 
   /* !shadow */
-  box-shadow: 10px 15px 10px rgb(103, 103, 103);
-  -webkit-box-shadow: 10px 15px 10px rgb(103, 103, 103);
+  box-shadow: -10px -15px 10px rgb(103, 103, 103);
+  -webkit-box-shadow: -10px -15px 10px rgb(103, 103, 103);
 }
 
 .footer-right {
