--- a/Css/style.css
+++ b/Css/style.css
@@ -6,8 +6,18 @@
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
-  scrollbar-width: thin;
   scroll-behavior: smooth;
+}
+
+:root {
+  --index-text-color: #0d6cc8;
+  --index-light-text-color: #09729f;
+  --index-light-light-text-color: #7fcbeb;
+}
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
 .index-body {
@@ -16,7 +26,6 @@
   padding: 0;
   background-attachment: fixed;
   background-size: cover;
-  background-repeat: repeat;
 }
 
 main {
@@ -29,8 +38,8 @@ ul {
 
 button {
   display: inline-block;
-  width: 130px;
-  height: 50px;
+  width: 7rem;
+  height: 3rem;
   border-radius: 10px;
   border: none;
   padding: 0;
@@ -42,8 +51,8 @@ button {
 button:hover {
   cursor: pointer;
   transition: 0.4s;
-  box-shadow: 5px 5px 5px #09729f;
-  -webkit-box-shadow: 5px 5px 5px #09729f;
+  box-shadow: 5px 5px 5px var(--index-light-text-color);
+  -webkit-box-shadow: 5px 5px 5px var(--index-light-text-color);
 }
 
 button:focus {
